<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">SIGN UP</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="switch_user">Switch User</string>
    <string name="select_user">Select User</string>
</resources>